<resources xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="application_name">YunOS HomeShell</string>
    <string name="folder_name"></string>
    <string name="chooser_wallpaper">Choose wallpaper from</string>
    <string name="activity_not_found">App isn\'t installed</string>
    <string name="widgets_tab_label">Widgets</string>
    <string name="long_press_widget_to_add">Please long press the widget to add</string>
    <string name="widget_dims_format">%1$d \u00d7 %2$d</string>
    <string name="group_applications">Apps</string>
    <string name="group_wallpapers">Wallpapers</string>
    <string name="completely_out_of_space">No more room on your Home screens</string>
    <string name="out_of_space">No more room on this Home screen</string>
    <string name="hotseat_out_of_space">No more room on the hotseat</string>
    <string name="shortcut_uninstalled">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" was removed</string>
    <string name="shortcut_duplicate">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" already exists</string>
    <string name="shortcut_updated">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" updated</string>
    <string name="title_select_application">Choose app</string>
    <string name="all_apps_button_label">Apps</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="permlab_install_shortcut">Install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an app to add shortcuts without user intervention.</string>
    <string name="permlab_uninstall_shortcut">Uninstall shortcuts</string>
    <string name="permdesc_uninstall_shortcut">Allows the app to remove shortcuts without user intervention</string>
    <string name="permlab_read_settings">Read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows the app to read the settings and shortcuts in Home</string>
    <string name="permlab_write_settings">Settings and shortcuts written in Home</string>
    <string name="permdesc_write_settings">Allows the app to change the settings and shortcuts in Home</string>
    <string name="permlab_write_suggestedapps">Suggested apps written in Home</string>
    <string name="permlab_read_suggestedapps">Suggested apps read in Home</string>
    <string name="permlab_icon_update">Send icon update intent</string>
    <string name="permdesc_icon_update">Allows the app to send icon update intent</string>
    <string name="gadget_error_text">Problem in loading widget</string>
    <string name="folder_hint_text">Unnamed Folder</string>
    <string name="workspace_description_format">Home screen %1$d</string>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="workspace_scroll_format">Home screen %1$d of %2$d</string>
    <string name="apps_customize_apps_scroll_format">Apps page %1$d of %2$d</string>
    <string name="apps_customize_widgets_scroll_format">Widgets page %1$d of %2$d</string>
    <string name="folder_opened">Folder opened, <xliff:g id="width" example="5">%1$d</xliff:g> by <xliff:g id="height" example="3">%2$d</xliff:g></string>
    <string name="folder_tap_to_close">Touch to close folder</string>
    <string name="folder_tap_to_rename">Touch to save rename</string>
    <string name="folder_renamed">Folder renamed to <xliff:g id="name" example="Games">%1$s</xliff:g></string>
    <string name="folder_name_format">Folder: <xliff:g id="name" example="Games">%1$s</xliff:g></string>
    <string name="title_folder_tools">Tools</string>
    <string name="widgets_view_title">Widgets</string>
    <string name="menu_item_themes">Themes</string>
    <string name="menu_item_wallpapers">Wallpapers</string>
    <string name="menu_item_homeshellsetting">HomeShell Settings</string>
    <string name="menu_item_widget">Widgets</string>
    <string name="menu_item_effects">Effects</string>
    <string name="menu_item_sort">Icon mgmt</string>
    <string name="menu_item_sort_page">Sort page</string>
    <string name="menu_item_sort_all">Sort all</string>
    <string name="menu_item_category">Category</string>
    <string name="new_mark_shortcut">New</string>
    <string name="notification_mark">\u2026</string>
    <string name="tools">Tools</string>
    <string name="tools_en">Tools</string>
    <string name="tools_cn">工具</string>
    <string name="tools_tw">工具</string>
    <string name="games">Games</string>
    <string name="games_en">Games</string>
    <string name="games_cn">游戏</string>
    <string name="games_tw">遊戲</string>
    <string name="recommend_app">Recommended apps</string>
    <string name="recommend_app_en">Recommended apps</string>
    <string name="recommend_app_cn">推荐应用</string>
    <string name="recommend_app_tw">推薦应用</string>
    <string name="folder_name_etc">" etc"</string>
    <string name="delete_succeed">Delete and uninstall the application successfully</string>
    <string name="delete_cloudapp_succeed">Uninstall the application successfully</string>
    <string name="delete_failed">Uninstall the application failed!</string>
    <string name="delete_bookmark_succeed">Delete the bookmark successfully!</string>
    <string name="cloudapp_add_succeed">The cloud application has been added to the homeshell</string>
    <string name="cloudapp_exist">The cloud application already exists</string>
    <string name="cloudapp_updated">The cloud application already updates to the homeshell</string>
    <string name="bookmark_add_succeed">The bookmark has been added to the homeshell</string>
    <string name="bookmark_exist">The bookmark already exists</string>
    <string name="bookmark_updated">The bookmark already updates to the homeshell</string>
    <string name="shortcut_added"><xliff:g id="name">%s</xliff:g> has been added to the homeshell</string>
    <string name="application_not_show_no_space">Current desktop has no vacancies, new applications temporarily not displayed</string>
    <string name="icon_not_show_no_space">Current desktop has no vacancies, other icons temporarily not displayed</string>
    <string name="application_unavailable">Application unavailable</string>
    <string name="application_unavailable_due_to_frozen">The application has been frozen, please move out first</string>
    <string name="application_unavailable_being_unfrozen">The application is being unfrozen, please wait a moment</string>
    <string name="shortcut_unavailable_due_to_frozen">The original application has been frozen, please unfroze it first</string>
    <string name="sdcard_application_unavailable">This application is unavailable, please check memory card or reinstall it</string>
    <string name="sdcard_application_unavailable_usb">The application is unavailable in USB drive mode</string>
    <string name="application_not_deleted_in_usb">Unable to delete in USB drive mode</string>
    <string name="allapp_updating_not_allowed_edit">Please edit after installation</string>
    <string name="restore_not_allowed_edit">Please edit after restoration</string>
    <string name="in_edit_staus">Drag icon onto another to add a new folder</string>
    <string name="open_wlan">Enable WLAN</string>
    <string name="close_wlan">Disable WLAN</string>
    <string name="open_mobile_data">Enable mobile data</string>
    <string name="close_mobile_data">Disable mobile data</string>
    <string name="open_soundmode_normal">Enable ringing mode</string>
    <string name="open_soundmode_silent">Enable silent mode</string>
    <string name="open_soundmode_vibrate">Enable vibration mode</string>
    <string name="app_updating">App is unavailable during the update</string>
    <string name="add_widgets_succes">Widget added</string>
    <string name="waiting">Waiting</string>
    <string name="downloading">Downloading</string>
    <string name="paused">Paused</string>
	<string name="installing">Installing</string>
    <string name="loading">Loading...</string>
    <string name="delete_download_info">Application Deleted</string>
    <string name="uninstall_title">Do you want to uninstall %s?</string>
    <string name="delete_profile_title">Do you want to uninstall clone of %s?</string>
    <string name="delete_and_uninstall_title">Uninstall %s and it\'s clone?</string>
    <string name="uninstall_app_confirm">Uninstall</string>
    <string name="uninstall_app_cancel">Cancel</string>
    <string name="dismiss_folder_hint">Do you want to dismiss %s folder?</string>
    <string name="dismiss_folder_confirm">Dismiss</string>
    <string name="dismiss_folder_cancel">Cancel</string>
    <string name="notify_wait_speech">Voice function is coming soon.</string>
    <string name="hideseat_is_full">Hideseat is full, you can not put more apps</string>
    <string name="hideseat_not_enough_space">There is no enough space in hideseat</string>
    <string name="app_exist">The application already exists</string>
    <string name="hideseat_cling_hint">Drag icons here, to freeze apps without any data and memory usage.</string>
    <string name="hideseat_does_not_accept_downloading_items">This icon cannot be frozen until finish the download.</string>
    <string name="hideseat_does_not_accept_installing_items">This icon cannot be frozen until finish the installation.</string>
    <string name="hideseat_does_not_accept_this_item">This icon cannot be frozen.</string>
    <string name="hideseat_does_not_accept_downloading_folder">This folder cannot be frozen until finish the download.</string>
    <string name="hideseat_does_not_accept_folder_with_non_app">This folder contains icons that cannot be frozen.</string>
    <string name="settings_individuation_title">Personalized</string>
    <string name="settings_layout_title">HomeShell Layout</string>
    <string name="settings_screen_slide_effect">Screen Slide Effect</string>
    <string name="settings_icon_layout">HomeShell Icons Layout</string>
    <string name="settings_arrange_page">Arrange HomeShell</string>
    <string name="setttings_arrange_page_subtitle">The page icon will be arranged with no gaps</string>
    <string name="settings_effect_cancel_btn">Cancel</string>
    <string name="settings_icon_mark_title">Icons mark</string>
    <string name="settings_icon_mark">Show new application icon mark</string>
    <string name="settings_icon_slide_up_mark">Show application icon slide up mark</string>
    <string name="settings_clonable_mark">Show clonable application icon mark</string>
    <string name="settings_notification_mark_title">Show notification marks on apps</string>
    <string name="settings_continuous_homeshell">Continuous Homeshell</string>
    <string name="forbid_layout_change_when_big">Can\'t change layout when using card background</string>
    <string name="confirm_btn_label">"OK"</string>
    <string name="cancel_btn_label">"Cancel"</string>
    <string name="upside_apps_title">Select the applications</string>
    <string name="over_folder_capicity">The maximum number of applications in folder is:</string>
    <string name="over_max_screen_count">Sorry, the maximum number of screens has reached! </string>
    <string name="search_app_goto_app_store">Search in App Market</string>
    <string name="search_app_mark">Application</string>
    <string name="search_bookmark_mark">Bookmark</string>
    <string name="search_cloudapp_mark">Cloud app</string>
    <string name="search_vp_mark">Recommended app</string>
    <string name="search_other_mark">Other</string>
    <string name="lifecenter_update_msg">Lifecenter updated, reload it ?</string>
    <string name="other_apps">Other Apps</string>
    <string name="others">Others</string>
    <string name="aged_freeze_homeshell">Edit lock</string>
    <string name="title_folder_recommend_app">Recommend Apps</string>
    <string name="xunhu_local_applications">Local applications</string>
</resources>